Header to disable hole images
